# ColorPickerWidget

./: CMakeLists.txt  LICENSE
src/: ColorPickerWidget.cpp  ColorPickerWidget.h  TestApp.cpp
